2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2007-09-19  Andreas Kupries  <akupries@shaw.ca>

	* pluginmgr.tcl (AddPaths): Fixed typo in the code converting the
	* pluginmgr.man: package pattern into a regular expression. A
	* pkgIndex.tcl: bogus space char separated * from its quoting
	  backslash, end result was a RE pattern without capturing
	  parentheses, so the plugin name was never properly extracted
	  from the package name. This fixes [SF Tcllib Bug 1798210].
	  Thanks to Jeremy Cowgar for the report. Additionally added
	  support for directory 'plugins' in the dot-directories
	  (pluginmgr::path). Package version bumped to 0.2.

2007-09-19  Andreas Kupries  <andreask@activestate.com>

	* pluginmgr.man: Fixed typo in the example, used the wrong
	  dot-path (.../plugins, should be .../plugin). Thanks to Jeremy
	  Cowgar for finding this.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-06-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pluginmgr.tcl: Replaced deprecated {expand} syntax in comments
	  with {*}.

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pluginmgr.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-07-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pluginmgr.tcl: Added and documented option -setup,