@@ -1,3 +1,9 @@
+2009-03-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* pluginmgr.tcl: Hook into the log system of the SafeBase to get
+	* pkgIndex.tcl: more detailed error information when a plugin
+	* pluginmgr.man: could not be loaded. Bumped to version 0.3
+
 2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
